<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailWisata.DetailWisataJawaBaratActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        app:title="Detail"
        app:titleTextColor="@color/white"
        app:subtitleTextAppearance="@style/ToolbarSubtitleTextAppearance"
        app:titleCentered="true"
        app:titleMarginStart="60dp"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteY="0dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="18dp"
                app:cardCornerRadius="25dp"
                app:cardElevation="10dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp">

                    <TextView
                        android:id="@+id/tv_set_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/name_wisata"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:fontFamily="@font/poppinsreg"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/img_item_photo"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_item_photo"
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:src="@android:color/darker_gray"
                        app:layout_constraintBottom_toTopOf="@+id/tv_item_location"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.498"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_set_name" />

                    <TextView
                        android:id="@+id/tv_item_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/content_Lokasi"
                        android:fontFamily="@font/poppinsreg"
                        android:textStyle="italic"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/img_item_photo" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>



            <TextView
                android:text="@string/wisata_description"
                android:textColor="@android:color/white"
                android:fontFamily="@font/poppinsreg"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="11dp"
                android:layout_marginRight="11dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="18dp"
                app:cardCornerRadius="25dp"
                app:cardElevation="10dp">


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:text="@string/title_identity"
                        android:fontFamily="@font/poppinsreg"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:text="@string/content_highlights"
                        android:textColor="@android:color/black"
                        android:fontFamily="@font/poppinsreg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/tv_set_highlights"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:text="@string/wisata_highlights"
                android:textColor="@android:color/white"
                android:fontFamily="@font/poppinsreg"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="11dp"
                android:layout_marginRight="11dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="18dp"
                app:cardCornerRadius="25dp"
                app:cardElevation="10dp">

                <TextView
                    android:text="@string/content_deskripsi"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/poppinsreg"
                    android:justificationMode="inter_word"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_set_description"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>